[UPD] some tweaks for what is ikoruna page

--- a/what_is_koruna.html
+++ b/what_is_koruna.html
@@ -103,31 +103,35 @@
                 <h3 class="w65">Platební systém I-Koruna je systém, který poskytuje služby, související se zpracováním finančních operací, přijetím plateb a převody peněžních prostředků.</h3>
 
                 <div class="col_2 col">
-                    <p>
-                        Platebním nástrojem systému je elektronická koruna v podobě elektronické platební karty.
-                    </p>
-                    <p>
-                        V systému I-Koruna existuje několik druhu karet, například elektronická, plastová bezdotyková karta NFC I-
-                        Korunna card, mobilní telefon, a sticker (polepka) I-Koruna mobile.
-                    </p>
-                    <p>
-                        Naší zákazníci mají možnost dle vlastního uvážení objednat plastovou kartu NFC, propojenou s účtem zákazníka v systému a to z osobního účtu.
-                    </p>
-                    <p>
-                        I-Koruna card je Vaší bezpečnou elektronickou peněženkou, univerzální účtenkou, dokonce i věrnostním 
-                        programem!
-                    </p>
+                    <div class="pad20 no-padding-left">
+                        <p>
+                            Platebním nástrojem systému je elektronická koruna v podobě elektronické platební karty.
+                        </p>
+                        <p>
+                            V systému I-Koruna existuje několik druhu karet, například elektronická, plastová bezdotyková karta NFC I-
+                            Korunna card, mobilní telefon, a sticker (polepka) I-Koruna mobile.
+                        </p>
+                        <p>
+                            Naší zákazníci mají možnost dle vlastního uvážení objednat plastovou kartu NFC, propojenou s účtem zákazníka v systému a to z osobního účtu.
+                        </p>
+                        <p>
+                            I-Koruna card je Vaší bezpečnou elektronickou peněženkou, univerzální účtenkou, dokonce i věrnostním 
+                            programem!
+                        </p>
+                    </div>
                 </div>
                 <div class="col_2 col">
-                    <p>
-                        I-Koruna card významně rozšiřuje možnosti majitele. Prostřednictvím karty NFC její majitel získá přístup k prostředkům na svém účtu v systému I Koruna a to i ve stavu off-line.
-                    </p>
-                    <p>
-                        Zapomeňte na peněženku, přecpanou plastem, od této chvíle si vystačíte jen s jedinou kartou!
-                    </p>
-                    <p>
-                        Prostřednictvím platební brány si můžete koupit novou nebo dobít stávající kartu, případně zaplatit svůj nákup v obchodě.
-                    </p>
+                    <div class="pad20">
+                        <p>
+                            I-Koruna card významně rozšiřuje možnosti majitele. Prostřednictvím karty NFC její majitel získá přístup k prostředkům na svém účtu v systému I Koruna a to i ve stavu off-line.
+                        </p>
+                        <p>
+                            Zapomeňte na peněženku, přecpanou plastem, od této chvíle si vystačíte jen s jedinou kartou!
+                        </p>
+                        <p>
+                            Prostřednictvím platební brány si můžete koupit novou nebo dobít stávající kartu, případně zaplatit svůj nákup v obchodě.
+                        </p>
+                    </div>
                 </div>
                 <div class="clear"></div>
                 <br><br>
@@ -169,68 +173,70 @@
         <hr class="text">
 
         <div class="container">
-            <table class="services">
-                <tr>
-                    <td>
-                        <h4>Možnosti užití</h4>
+            <div class="pad20">
+                <table class="services">
+                    <tr>
+                        <td>
+                            <h4>Možnosti užití</h4>
 
-                        <a href="#">Převody pěněžních prostředků</a><br>
-                        <a href="#">Platby v on-line obchodech</a><br>
-                        <a href="#">Platby v tradičních obchodech</a><br>
-                        <a href="#">Placení účtů a pravidelné platby</a>
-                    </td>
+                            <a href="#">Převody pěněžních prostředků</a>
+                            <a href="#">Platby v on-line obchodech</a>
+                            <a href="#">Platby v tradičních obchodech</a>
+                            <a href="#">Placení účtů a pravidelné platby</a>
+                        </td>
 
-                    <td>
-                        <h4>Naše služby</h4>
+                        <td>
+                            <h4>Naše služby</h4>
 
-                        <a href="#">Platební systém I-Koruna</a><br>
-                        <a href="#">Diskontní systém a elektronickou vstupenku I-Koruna card</a><br>
-                        <a href="#">Automatický převodník elektronické měny Ecashconverter</a><br>
-                        <a href="#">Supermarket mobilních operátorů Mobile Time Bank</a>
-                    </td>
+                            <a href="#">Platební systém I-Koruna</a>
+                            <a href="#">Diskontní systém a elektronickou vstupenku I-Koruna card</a>
+                            <a href="#">Automatický převodník elektronické měny Ecashconverter</a>
+                            <a href="#">Supermarket mobilních operátorů Mobile Time Bank</a>
+                        </td>
 
-                    <td>
-                        <h4>Naše technologie</h4>
+                        <td>
+                            <h4>Naše technologie</h4>
 
-                        <a href="#">Web-přístup</a><br>
-                        <a href="#">Mobile access</a><br>
-                        <a href="#">Karty NFC a mobilní telefony</a><br>
-                        <a href="#">Předplacené karty</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4>Vyvýjená řešení</h4>
+                            <a href="#">Web-přístup</a>
+                            <a href="#">Mobile access</a>
+                            <a href="#">Karty NFC a mobilní telefony</a>
+                            <a href="#">Předplacené karty</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h4>Vyvýjená řešení</h4>
 
-                        <a href="#">Vzdálené bankovnictví</a><br>
-                        <a href="#">Mobilní platby</a><br>
-                        <a href="#">Pravidelné platby</a><br>
-                        <a href="#">POS terminály</a>
-                    </td>
+                            <a href="#">Vzdálené bankovnictví</a>
+                            <a href="#">Mobilní platby</a>
+                            <a href="#">Pravidelné platby</a>
+                            <a href="#">POS terminály</a>
+                        </td>
 
-                    <td>
-                        <h4>&nbsp;</h4>
-                        <a href="#">Platební kostky</a><br>
-                        <a href="#">Vending</a><br>
-                        <a href="#">Předplacené karty</a><br>
-                        <a href="#">Virtuální měna</a>
-                    </td>
-                    <td>
-                        <h4>&nbsp;</h4>
+                        <td>
+                            <h4>&nbsp;</h4>
+                            <a href="#">Platební kostky</a>
+                            <a href="#">Vending</a>
+                            <a href="#">Předplacené karty</a>
+                            <a href="#">Virtuální měna</a>
+                        </td>
+                        <td>
+                            <h4>&nbsp;</h4>
 
-                        <a href="#">Dárkové poukazy</a><br>
-                        <a href="#">Elektronické obchodování</a><br>
-                        <a href="#">Agregace platebních nástrojů</a><br>
-                        <a href="#">Prodej elektronické měny</a>
-                    </td>
-                </tr>
-            </table>
+                            <a href="#">Dárkové poukazy</a>
+                            <a href="#">Elektronické obchodování</a>
+                            <a href="#">Agregace platebních nástrojů</a>
+                            <a href="#">Prodej elektronické měny</a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
 
-        <hr>
-
-        <div class="container">
+        <div class="container padding-bottom">
             <div class="pad20">
+                <hr>
+
                 <table class="partners">
                     <tr>
                         <th><a href="#">Our partners</a></th>
