--- a/how_it_works.html
+++ b/how_it_works.html
@@ -78,63 +78,74 @@
 
             <div class="content-blue">
                 <div class="pad20">
-                    <div class="col_2 fixed col">
-                        <div class="left">
-                            <h3>For customers</h3>
-                            <h5>iKoruna wallet</h5>
-                            <a href="#" class="red">
-                                Advantages >
-                            </a>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <a href="#" class="button submit">
-                                <span class="left"></span>
-                                <span class="text">Get iKoruna<br>wallet</span>
-                                <span class="right"></span>
-                            </a>
-                        </div>
-                        <div class="left">
-                            <img src="images/hp_wallet_big.png" alt="">
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-
-                    <div class="col_2 last col">
-                        <div class="left">
-                            <h3>For merchants</h3>
-                            <h5>Bussiness account</h5>
-                            <a href="#" class="red">
-                                Advantages >
-                            </a>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <a href="#" class="button submit">
-                                <span class="left"></span>
-                                <span class="text">Get bussiness<br>account</span>
-                                <span class="right"></span>
-                            </a>
-                        </div>
-                        <div class="left">
-                            <img src="images/hp_phone_big.png" alt="">
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-
-                    <div class="clear"></div>
+                    <h1>How it works?</h1>
                 </div>
 
+                <span class="icon triangle-up-big"></span>  
             </div>
         </div>
     </div>
 
-    <div class="content-white">
+    <div class="content-white what-is-ikoruna how-it-works">
         <div class="container">
             <div class="pad20">
-                <h3>Other operations</h3>
+                <div class="left text-heading">
+                    <h3 class="italic red">
+                        Tap your phone on reader.
+                    </h3>
+                    <h4 class="italic">
+                        Lorem ipsum dolor sit amet, consectetur adi piscing elit. Phasellus sit amet aliquet velit. Pellentesque cursus magna at elit.
+                    </h4>
+                </div>
+                <div class="left phone-wifi"></div>
+                <div class="left logo-text">
+                    <h4 class="italic">
+                        Look at these symbols
+                        <br><strong class="red">and checkout.</strong>
+                    </h4>
+                </div>
+                
+                <div class="clear"></div>
+            </div>
+        </div>
+
+        <hr class="text">
+
+        <div class="container">
+            <div class="pad20">
+                <h3 class="w65">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in ligula tellus, in ornare nulla. In vel tristique felis.</h3>
+
+                <div class="col_2 col">
+                    <div class="pad20 no-padding-left">
+                        <p>
+                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam porta, justo feugiat varius placerat, lectus ante tincidunt enim, eu laoreet velit quam vel neque.
+                        </p>
+                        <p>
+                            Donec et metus libero, eu pretium sapien. Sed et lacus metus. Suspendisse at augue neque. Aliquam erat volutpat. Mauris non pretium est. Aenean libero arcu, luctus quis congue vel, laoreet at enim. Quisque porttitor bibendum purus in blandit. Nunc lobortis nisl non ante dictum in sollicitudin enim interdum. Suspendisse sed gravida erat. Donec congue mollis nisl vitae laoreet. Praesent porttitor neque ac urna tincidunt consectetur. Curabitur eros turpis, scelerisque at semper vitae, scelerisque sed purus. Nunc urna nisi, lacinia id mollis condimentum, ornare pulvinar lorem.
+                        </p>
+                    </div>
+                </div>
+                <div class="col_2 col">
+                    <div class="pad20">
+                        <p>
+                            Duis sit amet imperdiet nisi. Maecenas molestie, urna ut placerat lobortis, nunc orci tincidunt tortor, et adipiscing tortor tortor at massa.
+                        </p>
+                        <p>
+                            Nulla lobortis ultrices molestie. Cras tempus velit et urna faucibus feugiat. Suspendisse potenti. Curabitur odio lacus, condimentum congue consectetur nec, scelerisque at lacus. Cras luctus odio et lorem sollicitudin pretium. Mauris viverra est in tellus condimentum varius.
+                        </p>
+                        <p>
+                            Nunc vulputate turpis id massa laoreet malesuada. Ut ut augue mauris. Quisque convallis odio et elit elementum sodales. Aliquam erat volutpat.
+                        </p>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+
+        <hr class="text">
+
+        <div class="container">
+            <div class="pad20">
                 <table>
                     <tr>
                         <td class="icons">
@@ -177,6 +188,11 @@
                     </tr>
                 </table>
                 <br><br>
+            </div>
+        </div>
+
+        <div class="container padding-bottom">
+            <div class="pad20">
 
                 <table class="partners">
                     <tr>
