[UPD] registration page

--- a/registration.html
+++ b/registration.html
@@ -78,7 +78,7 @@
 
             <div class="content-blue">
                 <div class="pad20">
-                    <h1>How it works?</h1>
+                    <h1>Customer registration</h1>
                 </div>
 
                 <span class="icon triangle-up-big"></span>  
@@ -86,65 +86,89 @@
         </div>
     </div>
 
-    <div class="content-white what-is-ikoruna how-it-works">
-        <div class="container">
+    <div class="content-white registration">
+        <div class="container padding-bottom">
             <div class="pad20">
-                <div class="left text-heading">
-                    <h3 class="italic red">
-                        Tap your phone on reader.
-                    </h3>
-                    <h4 class="italic">
-                        Lorem ipsum dolor sit amet, consectetur adi piscing elit. Phasellus sit amet aliquet velit. Pellentesque cursus magna at elit.
-                    </h4>
+                <form action="" method="post" class="col_2 col form">
+                    <div class="error-box">
+                        <span class="icon error"></span> Error! Lorem ipsum dolor sit
+                        <span class="icon triangle-down"></span>
+                    </div>
+                    <div class="row">
+                        <label>Jméno:</label>
+                        <input type="text" name="" value="">
+                    </div>
+                    <div class="row">
+                        <label class="error">Příjmení:</label>
+                        <input type="text" name="" value="" class="error">
+                    </div>
+                    <div class="row">
+                        <label>Adresa:</label>
+                        <input type="text" name="" value="">
+                    </div>
+                    <div class="row">
+                        <label>ID???:</label>
+                        <input type="text" name="" value="">
+                    </div>
+                    <div class="row">
+                        <label>Email:</label>
+                        <input type="text" name="" value="">
+                    </div>
+                    <div class="row">
+                        <label>Kontrolní kód:</label>
+                        <input type="text" name="" value="">
+                        <a href="#" class="red more">Poslat kód</a>
+                    </div>
+                    <div class="row">
+                        <label>Telefon:</label>
+                        <input type="text" name="" value="">
+                    </div>
+                    <br><br>
+                    <div class="row">
+                        <label>Přihlášení:</label>
+                        <input type="text" name="" value="">
+                    </div>
+                    <div class="row">
+                        <label>Heslo:</label>
+                        <input type="text" name="" value="">
+                    </div>
+                    <div class="row">
+                        <label>Heslo znovu:</label>
+                        <input type="text" name="" value="">
+                    </div>
+                    <br><br>
+                    <div class="row conditions">
+                        <img src="tmp/captcha.png" alt="">
+                    </div>
+                    <div class="row">
+                        <label>Kód z obrázku</label>
+                        <input type="text" name="" value="">
+                    </div>
+                    <br><br>
+                    <div class="row conditions">
+                        <input type="checkbox" name="" value=""> 
+                        Přečetl jsem si a souhlasím s <a href="#" class="conditions-link">Veřejné obchodní podmínky</a>
+                    </div>
+                    <br><br>
+                    <div class="row conditions">
+                        <a href="#" class="button submit green-big">
+                            <span class="left"></span>
+                            <span class="text">Registrovat</span>
+                            <span class="right"></span>
+                        </a>
+                    </div>
+                </form>
+
+                <div class="col_2 col image">
+                    <br><br><img src="images/hp_wallet_big.png" alt="">
                 </div>
-                <div class="left phone-wifi"></div>
-                <div class="left logo-text">
-                    <h4 class="italic">
-                        Look at these symbols
-                        <br><strong class="red">and checkout.</strong>
-                    </h4>
-                </div>
-                
                 <div class="clear"></div>
             </div>
         </div>
 
         <hr class="text">
 
-        <div class="container">
-            <div class="pad20">
-                <h3 class="w65">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in ligula tellus, in ornare nulla. In vel tristique felis.</h3>
-
-                <div class="col_2 col">
-                    <div class="pad20 no-padding-left">
-                        <p>
-                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam porta, justo feugiat varius placerat, lectus ante tincidunt enim, eu laoreet velit quam vel neque.
-                        </p>
-                        <p>
-                            Donec et metus libero, eu pretium sapien. Sed et lacus metus. Suspendisse at augue neque. Aliquam erat volutpat. Mauris non pretium est. Aenean libero arcu, luctus quis congue vel, laoreet at enim. Quisque porttitor bibendum purus in blandit. Nunc lobortis nisl non ante dictum in sollicitudin enim interdum. Suspendisse sed gravida erat. Donec congue mollis nisl vitae laoreet. Praesent porttitor neque ac urna tincidunt consectetur. Curabitur eros turpis, scelerisque at semper vitae, scelerisque sed purus. Nunc urna nisi, lacinia id mollis condimentum, ornare pulvinar lorem.
-                        </p>
-                    </div>
-                </div>
-                <div class="col_2 col">
-                    <div class="pad20">
-                        <p>
-                            Duis sit amet imperdiet nisi. Maecenas molestie, urna ut placerat lobortis, nunc orci tincidunt tortor, et adipiscing tortor tortor at massa.
-                        </p>
-                        <p>
-                            Nulla lobortis ultrices molestie. Cras tempus velit et urna faucibus feugiat. Suspendisse potenti. Curabitur odio lacus, condimentum congue consectetur nec, scelerisque at lacus. Cras luctus odio et lorem sollicitudin pretium. Mauris viverra est in tellus condimentum varius.
-                        </p>
-                        <p>
-                            Nunc vulputate turpis id massa laoreet malesuada. Ut ut augue mauris. Quisque convallis odio et elit elementum sodales. Aliquam erat volutpat.
-                        </p>
-                    </div>
-                </div>
-                <div class="clear"></div>
-            </div>
-        </div>
-
-        <hr class="text">
-
-        <div class="container">
+        <div class="container padding-bottom">
             <div class="pad20">
                 <table>
                     <tr>
@@ -188,11 +212,6 @@
                     </tr>
                 </table>
                 <br><br>
-            </div>
-        </div>
-
-        <div class="container padding-bottom">
-            <div class="pad20">
 
                 <table class="partners">
                     <tr>
