--- a/what_is_koruna.html
+++ b/what_is_koruna.html
@@ -266,7 +266,7 @@
             <div class="pad20">
                 <div class="col_2 left">
                     <div class="left">
-                        <h4>eCashConverter</h4>
+                        <h4>iKoruna</h4>
                         <ul>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Partners</a></li>
@@ -320,7 +320,7 @@
             <hr>
             <div class="pad20">
                 <div class="left c">
-                    &copy; 2011 E-cash Converter
+                    &copy; 2011 iKoruna Payment System
                 </div>
 
                 <div class="right copy">
