[UPD] added user signed header

--- a/my_ikoruna.html
+++ b/my_ikoruna.html
@@ -51,11 +51,18 @@
 
                     <div class="clear"></div>
 
-                    <a href="#" class="button green submit">
-                        <span class="left"></span>
-                        <span class="text">Sign in</span>
-                        <span class="right"></span>
-                    </a>
+                    <div class="profile-block">
+                        <div class="left">
+                            <img src="tmp/profile_image.png" alt="">
+                        </div>
+
+                        <div class="right">
+                            <strong>František Nováček</strong><br>
+                            <a href="#" class="red">Zobrazit účet</a>
+                        </div>
+
+                        <div class="clear"></div>
+                    </div>
                 </div>
 
                 <div class="clear"></div>
