--- a/payment_history.html
+++ b/payment_history.html
@@ -32,7 +32,7 @@
         <img src="images/top_blue_background.jpg" alt="" style="width: 100%; height: 100%; position: absolute; z-index: 1"/>
 
         <div class="container" style="position: relative; z-index: 2">
-            <header class="main">
+            <header class="main signed">
                 <a href="index.html" class="logo left">
                     <img src="images/logo.png" alt="e-cash converter">
                     <strong>iKoruna</strong>
@@ -51,11 +51,18 @@
 
                     <div class="clear"></div>
 
-                    <a href="#" class="button green submit">
-                        <span class="left"></span>
-                        <span class="text">Sign in</span>
-                        <span class="right"></span>
-                    </a>
+                    <div class="profile-block">
+                        <div class="left">
+                            <img src="tmp/profile_image.png" alt="">
+                        </div>
+
+                        <div class="right">
+                            <strong>František Nováček</strong><br>
+                            <a href="#" class="red">Zobrazit účet</a>
+                        </div>
+
+                        <div class="clear"></div>
+                    </div>
                 </div>
 
                 <div class="clear"></div>
