[FIX] minor fixes in header (language selector, sign-in button)

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="login">
                         <a href="#" class="button green submit">
                             <span class="left"></span>
-                            <span class="text">Sign in</span>
+                            <span class="text">Already a user?</span>
                             <span class="right"></span>
                         </a>
                     </div>
