--- a/index_signin.html
+++ b/index_signin.html
@@ -55,7 +55,7 @@
                     <div class="login active">
                         <a href="#" class="button green submit active">
                             <span class="left"></span>
-                            <span class="text">Sign in</span>
+                            <span class="text">Already a user?</span>
                             <span class="right"></span>
                         </a>
                     </div>
