--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="images/top_blue_background.jpg" alt="" style="width: 100%; height: 100%; position: absolute;"/>
 
         <div class="container" style="position: relative;">
-            <header class="main signed">
+            <header class="main">
                 <a href="index.html" class="logo left">
                     <img src="images/logo.png" alt="e-cash converter">
                     <strong>iKoruna</strong>
