--- a/my_ikoruna.html
+++ b/my_ikoruna.html
@@ -32,7 +32,7 @@
         <img src="images/top_blue_background.jpg" alt="" style="width: 100%; height: 100%; position: absolute;"/>
 
         <div class="container" style="position: relative;">
-            <header class="main">
+            <header class="main signed">
                 <a href="index.html" class="logo left">
                     <img src="images/logo.png" alt="e-cash converter">
                     <strong>iKoruna</strong>
@@ -88,7 +88,7 @@
                     <h1>František Nováček</h1>
                 </div>
 
-                <span class="icon triangle-up-big"></span>  
+                <span class="icon triangle-up-big"></span>      
             </div>
         </div>
     </div>
