[UPD] added already a user image in index.html and index_signin.html

--- a/index.html
+++ b/index.html
@@ -51,13 +51,16 @@
 
                     <div class="clear"></div>
 
-                    <div class="login">
-                        <a href="#" class="button green submit">
-                            <span class="left"></span>
-                            <span class="text">Already a user?</span>
-                            <span class="right"></span>
-                        </a>
+                    <div class="login-bg">
+                        <div class="login">
+                            <a href="#" class="button green submit">
+                                <span class="left"></span>
+                                <span class="text">Sign in</span>
+                                <span class="right"></span>
+                            </a>
+                        </div>
                     </div>
+
                 </div>
 
                 <div class="clear"></div>
