--- a/index_signin.html
+++ b/index_signin.html
@@ -52,12 +52,14 @@
 
                     <div class="clear"></div>
 
-                    <div class="login active">
-                        <a href="#" class="button green submit active">
-                            <span class="left"></span>
-                            <span class="text">Already a user?</span>
-                            <span class="right"></span>
-                        </a>
+                    <div class="login-bg">
+                        <div class="login active">
+                            <a href="#" class="button green submit active">
+                                <span class="left"></span>
+                                <span class="text">Sign in</span>
+                                <span class="right"></span>
+                            </a>
+                        </div>
                     </div>
 
                     <div class="login-form">
