[UPD] fonts using cufon

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/cufon-yui.min.js"></script>
+    <script type="text/javascript" src="js/Aller_400-Aller_700-Aller_italic_400-Aller_italic_700.font.js"></script>
     <script type="text/javascript" src="js/jquery.selectbox-0.6.1.js"></script>
     <script type="text/javascript">
+    Cufon.replace("h1")("h2")("h3")("header.main .logo strong")("nav.top a", ".button")(".content-blue .col2.last h3")(".content-white .col2 h3");
     </script>
 
     <!-- Favicons -->
